# RPS

./: README.md
dz_socket/: CMakeLists.txt  Doxyfile  README.md  server-test.sh
dz_socket/doc/: multiprocess_echo_server.md
dz_socket/include/: client.hpp  client_maze.hpp  maze.hpp  multiprocess_echo_server.hpp  multiprocess_maze_server.hpp
dz_socket/src/client/: client.cpp  client_main.cpp
dz_socket/src/server/: multiprocess_server.cpp  server_main.cpp
lab1/: CMakeLists.txt  README.md  result.txt  script.sh
lab1/src/: main.cpp  multi_thread_string_solver.hpp  parameter_parser.hpp  string_oscillation.cpp  string_oscillation.hpp
lab1_z1/: README.md
lab1_z1/src/: abstract_string_solver.hpp  multi_thread_string_solver.hpp  parameter_parser.hpp  single_thread_string_solver.hpp  string_parameters.hpp
lab1_z2/: README.md  res_diagram.gp  script.sh
lab1_z2/src/: parameter_parser.hpp  single_thread_string_solver.hpp  string_oscillation.cpp  string_plotter.hpp
lab2/: CMakeLists.txt  create_animation.gp
lab2/src/: multi_thread_string_solver.hpp  parameter_parser.hpp  string_oscillation.cpp  string_solution.hpp  tmp.hpp
lab2_z1/: README.MD
lab2_z1/src/: mpi_main.cpp  string_parameters.hpp
lab2_z2/src/: mpi_main.cpp
lab2_zz1/: CMakeLists.txt  create_animation.gp  res_diagram.gp  result.txt  script.sh
lab2_zz1/lab2_z1/: create_animation.gp  res_diagram.gp  result.txt  script.sh
lab2_zz1/lab2_z1/src/: parameter_parser.hpp
lab2_zz1/src/: mpi_main.cpp
lab2_zz2/src/: mpi_main.cpp  parameter_parser.hpp
